jfrog-artifactory-role/files/k8s/jfrog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jfrog-ingress
  namespace: artifactory
  annotations:
    nginx.org/client-max-body-size: "100m"


spec:
  ingressClassName: nginx
  rules:
    - host: jfrog-maayan.octopus.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artifactory
                port:
                  number: 8082
